# resources/views/welcome.blade.php
@@ -8,12 +8,14 @@
     <title>Dictionary API</title>
 
     <!-- Font-Awesome -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
+          integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA=="
+          crossorigin="anonymous"/>
 
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <link rel="shortcut icon" href="{{ asset('favicon.ico') }}" type="image/x-icon">
+    <link rel="shortcut icon" href="{{ asset('images/logo.png') }}" type="image/x-icon">
 
     <!-- CSS -->
     <link rel="stylesheet" href="{{ asset('css/bootstrap.min.css') }}">
@@ -26,9 +28,9 @@
         <div class="card m-5">
             <div class="card body">
                 <div class="text-center">
-                    <img src="https://laravel.com/img/logomark.min.svg" width="200" />
+                    <img src="{{ asset('images/logo.png') }}" width="200" alt="logo"/>
                 </div>
-                <h2 class="mt-3">Dictionary API</h2>
+                <h2 class="mt-3">Dictionary APP For IT API</h2>
                 <div class="text-center">
                     <span class="badge badge-info">Laravel 10</span>
                 </div>
@@ -37,13 +39,14 @@
                 <div class="card card-body m-2">
                     <div class="row">
                         <div class="col-5">
-                            <h4>Authentication Module</h4>
+                            <h4>User Module</h4>
                         </div>
                         <div class="col-7">
                             <ul class="feature-list">
                                 <li>Login API with Token</li>
                                 <li>Authenticated User Profile</li>
                                 <li>Refresh Data</li>
+                                <li>get user by id</li>
                                 <li>Logout</li>
                             </ul>
                         </div>
@@ -63,6 +66,59 @@
                         </div>
                     </div>
                 </div>
+
+                <div class="card card-body m-2">
+                    <div class="row">
+                        <div class="col-5">
+                            <h4>History Module</h4>
+                        </div>
+                        <div class="col-7">
+                            <ul class="feature-list">
+                                <li>check if exist</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-body m-2">
+                    <div class="row">
+                        <div class="col-5">
+                            <h4>Search Module</h4>
+                        </div>
+                        <div class="col-7">
+                            <ul class="feature-list">
+                                <li>search word</li>
+                                <li>search by specialty</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="card card-body m-2">
+                    <div class="row">
+                        <div class="col-5">
+                            <h4>Specialization Module</h4>
+                        </div>
+                        <div class="col-7">
+                            <ul class="feature-list">
+                                <li>get all specializations</li>
+                                <li>display by specializations</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card card-body m-2">
+                    <div class="row">
+                        <div class="col-5">
+                            <h4>Words Module</h4>
+                        </div>
+                        <div class="col-7">
+                            <ul class="feature-list">
+                                <li>random word</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
                 <p class="text-center">
                     <a href="{{ route('l5-swagger.default.api') }}" class="btn btn-primary">
                         <i class="fa fa-book"></i>API Documentation
